Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -3229,7 +3229,7 @@ font-weight: bold !important;
 
 /* SHAPE: Rounded Square */
 .custom_ui_28938_28940 .cover-btn{
-    top: 50%;
+    top: 60%;
 }
 
 .custom_ui_28938_28940 .cover-link {
